Fix wonky pre spacing

--- a/assets/css/settings/type.css
+++ b/assets/css/settings/type.css
@@ -168,11 +168,15 @@ pre {
   overflow-x: auto;
   font-size: 0.8em;
   padding: $spacing;
-  margin-right: calc(9 * -$spacing);
+  margin-right: -$spacing;
   margin-left: -$spacing;
   background: $slightly-lighter-dark-grey;
   box-shadow: 0 1px 1px var(--shadow);
   color: $white;
+
+  @media (--desktop) {
+    margin-right: calc(9 * -$spacing);
+  }
 }
 
 figure {
